tests/machine/x/pascal/query_sum_select.error
line: 27
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/TestPascalCompiler_VMValid_Goldenquery_sum_select2983642187/001/main.pas
main.pas(24,14) Error: Incompatible types: got "TArray$1$crcFD0234A9" expected "TArray$1$crcE41905E8"
main.pas(25,18) Error: Can't read or write variables of this type
main.pas(27) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

  25:   writeln(_result);
  26: end.
  27: 
