tests/machine/x/pascal/query_sum_select.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:43:29Z
program QuerySumSelect;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

var
  _tmp0: specialize TArray<double>;
  n: integer;
  nums: specialize TArray<integer>;
  _result: specialize TArray<Variant>;

begin
  nums := specialize TArray<integer>([1, 2, 3]);
  SetLength(_tmp0, 0);
  for n in nums do
  begin
    if not ((n > 1)) then continue;
    _tmp0 := Concat(_tmp0, [0]);
  end;
  _result := _tmp0;
  writeln(_result);
end.
